fix: invalid tag format

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Extract prerelease info
       run: |
         input=$(ls -d downloads/*-Ubuntu64) && echo PRERELEASE=${input:10:7} >> $GITHUB_ENV
-        
+
     - name: Display directory contents
       run: ls -R
 
@@ -35,4 +35,4 @@ jobs:
         docker build . \
         --file Dockerfile \
         --tag latest \
-        --tag /some/repo/obs-websocket:$(date +%s).${PRERELEASE}
+        --tag /some/repo/obswebsocket:$(date +%s).${PRERELEASE}
