fix: more invalid tag format

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -35,4 +35,4 @@ jobs:
         docker build . \
         --file Dockerfile \
         --tag latest \
-        --tag /some/repo/obswebsocket:$(date +%s).${PRERELEASE}
+        --tag some/repo/obswebsocket:$(date +%s).${PRERELEASE}
