--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -29,10 +29,21 @@ jobs:
     - name: Display directory contents
       run: ls -R
 
-    # Build the image
-    - name: Build the Docker image
-      run: |
-        docker build . \
-        --file Dockerfile \
-        --tag latest \
-        --tag some/repo/obswebsocket:$(date +%s).${PRERELEASE}
+    # Login to Docker, Build, and Push Image
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: 
+          - tinatiel/obswebsocket:latest
+          - tinatiel/obswebsocket:$(date +%s).${PRERELEASE}
