--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -43,7 +43,8 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
+        context: .
         push: true
-        tags: 
-          - tinatiel/obswebsocket:latest
-          - tinatiel/obswebsocket:$(date +%s).${PRERELEASE}
+        tags: |
+          tinatiel/obswebsocket:latest
+          tinatiel/obswebsocket:$(date +%s).${PRERELEASE}
