Added cron schedule to automatically push daily changes

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -3,6 +3,9 @@ name: Docker Image CI - Latest
 on:
   push:
     branches: [ main ]
+  schedule:
+    # Once daily at midnight
+    - cron:  '0 0 * * *'
 
 jobs:
   build:
