--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -48,6 +48,8 @@ jobs:
     # Build and Test/Verify image
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+      with:
+          driver-opts: network=host
     
     - name: Build and push to local registry
       uses: docker/build-push-action@v2
