--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -69,7 +69,9 @@ jobs:
 
     - name: Verify the build runs
       run: |
-        docker run -p 4444:4444 localhost:5000/${{ env.ARTIFACT }}:latest \
+        docker run -d -p 4444:4444 localhost:5000/${{ env.ARTIFACT }}:latest \
+        && python ./verify_conn.py \
+        && docker logs $(docker ps --filter="ancestor=tinatiel/obswebsocket" --latest --format="{{.ID}}") \
         && python ./verify_conn.py
 
     # Login to docker and push image
