fix: added delay before testing connect; the problem was connecting too early. Enabled the realpush tags

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -81,19 +81,10 @@ jobs:
         context: .
         push: true
         tags: |
-          ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:test
+          ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
+          ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }}
 
-    # - name: Build and push
-    #   id: docker_build
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     context: .
-    #     push: true
-    #     tags: |
-    #       ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
-    #       ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }}
-
-    # # Verify Upload / Inspect Image     
-    # - name: Inspect Uploaded Image
-    #   run: |
-    #     docker image inspect ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
+    # Verify Upload / Inspect Image     
+    - name: Inspect Uploaded Image
+      run: |
+        docker image inspect ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
