Added pull before image inspect

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -87,4 +87,5 @@ jobs:
     # Inspect Image     
     - name: Inspect Uploaded Image
       run: |
-        docker image inspect ${{ env.REGISTRY }}/${{ env.ARTIFACT }}
+        docker pull ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }} \
+        && docker image inspect ${{ env.REGISTRY }}/${{ env.ARTIFACT }}
