--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -2,10 +2,10 @@ name: Docker Image CI - Latest
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   schedule:
     # Once daily at midnight
-    - cron:  '0 0 * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 env:
@@ -21,65 +21,49 @@ jobs:
         ports:
           - 5000:5000
     steps:
-    # Checkout the Repo
-    - uses: actions/checkout@v2
-    
-    # Download the latest artifacts from Palakis
-    - name: Download Palakis latest Ubuntu Build
-      uses: dawidd6/action-download-artifact@v2
-      with:
-        github_token: ${{secrets.GITHUB_TOKEN}}
-        workflow: main.yml # "CI Multiplatform Build"
-        branch: master
-        repo: Palakis/obs-websocket
-        path: downloads
-     
-    # Extract the git hash info of the download
-    - name: Extract prerelease info
-      run: |
-        input=$(ls -d downloads/*-Ubuntu64) && echo PRERELEASE=${input:10:7} >> $GITHUB_ENV
-    - name: Set Tag
-      run: |
-        echo FINAL_TAG=$(date +%s).${PRERELEASE} >> $GITHUB_ENV
+      # Checkout the Repo
+      - uses: actions/checkout@v2
 
-    - name: Display directory contents
-      run: ls -R
+      # Set FINAL_TAG in GITHUB_ENV
+      - name: Set Tag
+        run: |
+          echo FINAL_TAG=$(date +%s) >> $GITHUB_ENV
 
-    # Build and Test/Verify image
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      with:
+      # Build and Test/Verify image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
           driver-opts: network=host
-    
-    - name: Build and push to local registry
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: localhost:5000/${{ env.ARTIFACT }}:latest
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
+      - name: Build and push to local registry
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: localhost:5000/${{ env.ARTIFACT }}:latest
 
-    - name: Verify the build
-      run: |
-        chmod +x verify_build.sh && ./verify_build.sh localhost:5000/${{ env.ARTIFACT }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
-    # Login to docker and push image
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Verify the build
+        run: |
+          chmod +x verify_build.sh && ./verify_build.sh localhost:5000/${{ env.ARTIFACT }}
 
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: |
-          ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
-          ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }}
+      # Login to docker and push image
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
+            ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }}
