core: Migrate to Docker Hub Organization

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
 
 env:
-  REGISTRY: tinatiel
-  ARTIFACT: obswebsocket
+  REGISTRY: obs-websocket-community
+  ARTIFACT: docker
 
 jobs:
   build-test-push:
