core: Migrate to Docker Hub Organization

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  REGISTRY: obs-websocket-community
+  REGISTRY: obswebsocketcommunity
   ARTIFACT: docker
 
 jobs:
