--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
   schedule:
     # Once daily at midnight
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 env:
@@ -29,27 +29,15 @@ jobs:
         run: |
           echo FINAL_TAG=$(date +%s) >> $GITHUB_ENV
 
-      # Build and Test/Verify image
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: network=host
 
-      - name: Build and push to local registry
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: localhost:5000/${{ env.ARTIFACT }}:latest
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-
-      - name: Verify the build
-        run: |
-          chmod +x verify_build.sh && ./verify_build.sh localhost:5000/${{ env.ARTIFACT }}
 
       # Login to docker and push image
       - name: Login to Docker Hub
@@ -58,12 +46,49 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      # Build and Test/Verify images
+      - name: Build and push secured image to local registry
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.secured
+          push: true
+          tags: localhost:5000/${{ env.ARTIFACT }}:latest
+
+      - name: Verify the secured build
+        run: |
+          chmod +x verify_build.sh && ./verify_build.sh localhost:5000/${{ env.ARTIFACT }} latest
+
+      - name: Build and push secured image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: Dockerfile.secured
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest
             ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }}
+
+      - name: Build and push unsecured image to local registry
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.unsecured
+          push: true
+          tags: localhost:5000/${{ env.ARTIFACT }}:latest-unsecured
+
+      - name: Verify the unsecured build
+        run: |
+          chmod +x verify_build.sh && ./verify_build.sh localhost:5000/${{ env.ARTIFACT }} latest-unsecured unsecured
+
+      - name: Build and push unsecured image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.unsecured
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:latest-unsecured
+            ${{ env.REGISTRY }}/${{ env.ARTIFACT }}:${{ env.FINAL_TAG }}-unsecured
